[gd_scene load_steps=12 format=3 uid="uid://le27alqgb4bm"]

[ext_resource type="Theme" uid="uid://lqrgxsxs2fye" path="res://ui/font and theme/base_theme.tres" id="1_ulgwu"]
[ext_resource type="Script" path="res://Scripts/how_to_play.gd" id="2_hdbde"]
[ext_resource type="StyleBox" path="res://ui/font and theme/how_to_play_theme.tres" id="3_ekvai"]

[ext_resource type="AudioStream" uid="uid://d04q3olf0jxrl" path="res://music/sfx/agreement_start.ogg" id="4_xt17c"]
[ext_resource type="AudioStream" uid="uid://loe63u4nelqo" path="res://music/sfx/agreement_end.ogg" id="5_11l48"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7r5gc"]
bg_color = Color(0.12, 0.32, 0.6, 0.0666667)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.4743, 0.85405, 0.93, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ox1rc"]
bg_color = Color(0.12, 0.32, 0.6, 0.0666667)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.1518, 0.408633, 0.46, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82e35"]
bg_color = Color(0.12, 0.32, 0.6, 0.0666667)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.4743, 0.85405, 0.93, 1)

[sub_resource type="Animation" id="Animation_1l1fi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2560, 1440)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1663, 68)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(449, 694)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/Title:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/Lore:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/Controls:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/NewTech:visible_ratio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/Agreement:visible_ratio")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/ConfirmAgreement:text")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="Animation" id="Animation_32sqs"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2560, 1440)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(49, 68), Vector2(1537, 68), Vector2(1537, 1268)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1256, 694), Vector2(512, 694), Vector2(512, 16)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/Title:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/Lore:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/Controls:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/NewTech:visible_ratio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/Agreement:visible_ratio")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/ConfirmAgreement:text")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["", "CONFIRM AGREEMENT"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d416d"]
_data = {
"RESET": SubResource("Animation_1l1fi"),
"new_animation": SubResource("Animation_32sqs")
}

[node name="HowToPlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2560.0
offset_bottom = 1440.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ulgwu")
script = ExtResource("2_hdbde")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 449.0
offset_top = 694.0
offset_right = 2112.0
offset_bottom = 778.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_ekvai")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]BIOHOLO TECH SPORT WAIVER[/center]

"
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="Lore" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.264, 0.710667, 0.8, 1)
text = "It is well known that Association Football transformed into Jetball when jetpacks became widespread, and sports arrived in space. We expanded as a civilization and traveled the stars to distant galaxies to harness their energies. With the new low-gravity Jetball arena built in system Hephaestus-IV, scientists have wanted to try out their new BioHolo technology on none other than talented Jetball players like you!

"
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="Controls" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.264, 0.710667, 0.8, 1)
bbcode_enabled = true
text = "Just like in normal Jetball, use [color=gold]WASD[/color] or the [color=gold]ARROW KEYS[/color] to [color=gold]slide against walls.[/color] Use [color=gold]SPACE[/color] to [color=gold]BOOST[/color] yourself off a wall in the direction you are facing. [color=gold]Push the BALL[/color] to the opponent's [color=gold]GOAL to SCORE[/color] a point for your team.

"
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="NewTech" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.264, 0.710667, 0.8, 1)
bbcode_enabled = true
text = "Now, this is where your test data comes in. When either you or your opponent scores a goal, a [color=gold]hologram[/color] of yourself and your opponent from the previous round will [color=gold]appear as a teammate for their team.[/color] There are two technological limitations:

Only [color=orange]3[/color] holograms may exist at a time.
The technology is [color=orange]still very new, [/color]and the holograms [color=orange]may be inaccurate.[/color]

"
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="Agreement" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.264, 0.710667, 0.8, 1)
bbcode_enabled = true
text = "If you have read all of the above, press the button to agree to the waiver.


"
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="ConfirmAgreement" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_ekvai")
theme_override_styles/hover = SubResource("StyleBoxFlat_7r5gc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ox1rc")
theme_override_styles/disabled = ExtResource("3_ekvai")
theme_override_styles/focus = SubResource("StyleBoxFlat_82e35")
icon_alignment = 2
vertical_icon_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d416d")
}
autoplay = "new_animation"

[node name="Start_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xt17c")
bus = &"sfx"

[node name="End_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_11l48")
bus = &"sfx"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ConfirmAgreement" to="." method="_on_confirm_agreement_pressed"]
